# TAFFO-submodule-init

./: .gitmodules  CMakeLists.txt  PragmaNotes.md  README.md  main.ll
TaffoClangPlugin/: CmakeLists.txt  Dev Guide.md  README.md  TaffoPlugin.cpp  User Guide.md  main.c  main.ll
TaffoFlangInitializer/: Annotations.cpp  TaffoInitializerPass.cpp
TaffoInitializer/: AnnotationParser.cpp  AnnotationParser.h  Annotations.cpp  CMakeLists.txt  FixedPointType.cpp  FixedPointType.h  IndirectCallPatcher.cpp  IndirectCallPatcher.h  TaffoInitializerPass.cpp  TaffoInitializerPass.h
TaffoInitializer/MDUtils/: InputInfo.cpp  InputInfo.h  Metadata.cpp  Metadata.h
TaffoPlugin/: CmakeLists.txt  README.md  TaffoPlugin.cpp
example/: main.c  main.ll
test/: calculator_ranges.c  main.ll
test/C-example-code/: main.c  main.ll  main1.c  program-taffo
